Fixed a quick style error due to overflowing text. Added some input validation for the grade section to prevent inputs that will break the program.

--- a/src/ErrorCard.css
+++ b/src/ErrorCard.css
@@ -71,6 +71,7 @@
     flex-direction: column;
     background: #282C34;
     position: relative;
+    overflow: hidden;
 }
 
 .errorDeduction::before {
